--- a/src/pages/ChatsPage/ChatsPage.module.scss
+++ b/src/pages/ChatsPage/ChatsPage.module.scss
@@ -23,7 +23,7 @@
       flex-direction: column-reverse;
       align-items: center;
       .message {
-        animation: fadeIn 1s;
+        //animation: fadeIn 1s;
         box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
           rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
           rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
