--- a/src/pages/ChatsPage/ChatsPage.module.scss
+++ b/src/pages/ChatsPage/ChatsPage.module.scss
@@ -73,7 +73,7 @@
       font-style: bold;
       display: flex;
       justify-content: center;
-      font-size: 15vh;
+      font-size: 10vh;
       color: transparent;
       background: #666666;
       -webkit-background-clip: text;
@@ -110,6 +110,7 @@
     }
 
     img {
+      padding: 2px;
       border-radius: 50%;
       overflow: hidden;
       width: 90px;
